Criada as classes AnalogOutputDevice, AnalogOutputDeviceRepository, AnalogOutputDeviceService e AnalogOutputDeviceController